rs/spreads-blosc-sys/blosc_wrapper.h

BLOSC_EXPORT int
bitshuffle(const size_t bytesoftype, const size_t blocksize,
           const char* const _src, const char* _dest,
           const char* _tmp);
/**
  Primary unshuffle and bitunshuffle routine.
  This function dynamically dispatches to the appropriate hardware-accelerated
  routine based on the host processor's architecture. If the host processor is
  not supported by any of the hardware-accelerated routines, the generic
  (non-accelerated) implementation is used instead.
  Consumers should almost always prefer to call this routine instead of directly
  calling the hardware-accelerated routines because this method is both cross-
  platform and future-proof.
*/
BLOSC_EXPORT void
unshuffle(const size_t bytesoftype, const size_t blocksize,
          const char* _src, const char* _dest);
BLOSC_EXPORT int
bitunshuffle(const size_t bytesoftype, const size_t blocksize,
             const char* const _src, const char* _dest,
             const char* _tmp);