rs/spreads-blosc-sys/src/lib.rs

extern "C" {
    pub fn bitshuffle(
        bytesoftype: usize,
        blocksize: usize,
        _src: *const libc::c_char,
        _dest: *const libc::c_char,
        _tmp: *const libc::c_char,
    ) -> libc::c_int;
}
extern "C" {
    ///Primary unshuffle and bitunshuffle routine.
    ///This function dynamically dispatches to the appropriate hardware-accelerated
    ///routine based on the host processor's architecture. If the host processor is
    ///not supported by any of the hardware-accelerated routines, the generic
    ///(non-accelerated) implementation is used instead.
    ///Consumers should almost always prefer to call this routine instead of directly
    ///calling the hardware-accelerated routines because this method is both cross-
    ///platform and future-proof.
    pub fn unshuffle(
        bytesoftype: usize,
        blocksize: usize,
        _src: *const libc::c_char,
        _dest: *const libc::c_char,
    );
}
extern "C" {
    pub fn bitunshuffle(
        bytesoftype: usize,
        blocksize: usize,
        _src: *const libc::c_char,
        _dest: *const libc::c_char,
        _tmp: *const libc::c_char,
    ) -> libc::c_int;
}
